--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "primeflex": "^4.0.0",
     "primeicons": "^7.0.0",
     "vue": "^3.5.22",
     "vue-router": "^4.5.1"
